--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,13 @@
     <head>
         <title>Hello, world!</title>
 
-        <link rel="stylesheet" href="https://use.typekit.net/dan5apk.css">
+        <link href="https://fonts.bunny.net/css?family=aleo:400,500,600|archivo:400,900|dm-mono:400" rel="stylesheet" />
+        
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <style>
+        <style type="text/css">
             body {
-                font-family: "indivisible", sans-serif;
+                font-family: "Archivo", sans-serif;
                 font-weight: 400;
                 font-style: normal;
             }
@@ -32,7 +33,7 @@
                 background-color: #eef0f3;
                 border: 1px solid #d8dee7;
                 border-radius: 3px;
-                font-family: monospace;
+                font-family: "DM Mono", monospace;
                 display: inline-block;
                 padding: 1px 4px;
                 margin-top: 1px;
@@ -56,11 +57,32 @@
             }
 
             .logo {
-                font-family: "embury-text", serif;
+                font-family: "Aleo", serif;
+
                 font-weight: 400;
                 text-decoration: none;
                 color: #477fd8;
                 font-size: 1em;
+            }
+
+            /* dark styles */
+            @media (prefers-color-scheme: dark) {
+                body {
+                    background-color: #1a1a1a;
+                    color: #fff;
+                }
+
+                .card {
+                    background-color: #2b2b2b;
+                    border: 1px solid #333;
+                    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+                }
+
+                code {
+                    background-color: #35373b;
+                    border: 1px solid #4f5560;
+                    color: #fff;
+                }
             }
         </style>
     </head>
